--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,7 @@
 body {
 	font-family: 'Titillium Web', sans-serif;
 	background-color: #f2f2f2;
-	margin-left: 30px;
-	margin-right: 30px;
+  margin: auto;
   text-align: center;
   color: #C8C8C8;
 }
@@ -19,13 +18,17 @@ img{
   width: 100%;
 
 }
+
+a {
+	text-decoration: none;
+}
 button {
   border-radius: 5px;
   cursor: pointer;
   font-size: 17px;
   color: white;
   font-family: 'Titillium Web', sans-serif;
-  background-color: #5AA6ED;
+  background-color: tomato;
   font-size: 17px;
   height: 50px;
   width: 90%;
@@ -34,7 +37,7 @@ button {
   margin-bottom: 10px;
  }
  button:hover {
-  background-color: #80bbff; 
+  background-color: #ff9980; 
 }
  
 .font-40{
@@ -54,26 +57,31 @@ button {
 .main-container {
   background-color: white;
   padding: 20px 20px 20px 20px;
-  margin-left: 2px;
-  margin-right: 2px;
-  margin-top: 2px;
-  margin-bottom: 2px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 100px;
+  margin-bottom: 10px;
 }
 .margin-bottom{
   margin-bottom: 70px;
 }
 .link {
 	padding: 10px;
-	color: white;
+  color: white;
 }
 .link-group {
-	background-color: #5AA6ED;
+	background-color: tomato;
   padding-top: 20px;
   padding-bottom: 20px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  display: block;
+  overflow: hidden;
 
 }
 .link:hover {
-	background-color: #80bbff;
+	background-color: #ff9980;
 }
 .less-margin{
   margin-top: -10px;
@@ -94,11 +102,14 @@ button {
   .main-container {
     background-color: white;
     padding: 40px 40px 40px 40px;
-    margin-top: 50px;
+    margin-top: 100px;
     margin-bottom: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
   }
   button{
 		width: 200px;
 	}
 }
 
+/* */
