--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,30 @@ body {
 	background-color: #f2f2f2;
   margin: auto;
   text-align: center;
-  color: #C8C8C8;
+  /* color: #C8C8C8; */
+}
+header {
+	/* text-align: center;
+  background-image: url('https://templated.co/items/demos/transitive/images/banner.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	padding-bottom: 60px;
+  margin-bottom: 20px;
+  /* padding-top: 300px; */
+  /* margin-top: 100px;
+  margin-left: -10px;
+  margin-right: -10px;
+  border: 2px solid black;  */
+
+  text-align: center;
+	margin-bottom: 10px;
+  	background-image: url('https://templated.co/items/demos/transitive/images/banner.jpg');
+  	background-repeat: no-repeat;
+  	background-size: cover;
+  	color: white;
+    padding-bottom: 100px;
+    padding-top: 100px;
+    margin-top: 63px;
 }
 
 ul {
@@ -17,6 +40,9 @@ ul {
 img{
   width: 100%;
 
+}
+p{
+  font-size: 17px;
 }
 
 a {
@@ -89,6 +115,13 @@ button {
     width: 600px;
   
   }
+  header {
+    height: 785px;
+		padding-top: 200px;
+  }
+  header p{
+		font-size: 25px;
+	}
   .bio-div{
     width: 500px;
     margin: auto;
@@ -107,6 +140,9 @@ button {
   .project-description{
     width: 500px;
     margin: auto;
+  }
+  h1 {
+		font-size: 100px;
   }
 }
 
