--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,11 @@ body {
 	background-color: #f2f2f2;
   margin: auto;
   text-align: center;
+  /* background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRhE0eOdypW7R_D5hEC7PSWISCS1A_CEuj-4SotIERYIVbBemWL'); */
   /* color: #C8C8C8; */
+  /* background-repeat: no-repeat;
+  background-size: cover; */
+  /* opacity: .9; */
 }
 header {
 	/* text-align: center;
@@ -22,8 +26,8 @@ header {
   border: 2px solid black;  */
 
   text-align: center;
-	margin-bottom: 10px;
-  	background-image: url('https://templated.co/items/demos/transitive/images/banner.jpg');
+  margin-bottom: 10px;
+  background-image: url('https://images.unsplash.com/photo-1487284122274-e864e9dec2bf?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5edd950e986d5ed7b84a908bf6df269f&w=1000&q=80');
   	background-repeat: no-repeat;
   	background-size: cover;
   	color: white;
@@ -52,18 +56,19 @@ button {
   border-radius: 5px;
   cursor: pointer;
   font-size: 17px;
-  color: white;
   font-family: 'Titillium Web', sans-serif;
-  background-color: tomato;
+  background-color: white;
+  color: #511515;
   font-size: 17px;
   height: 50px;
   width: 90%;
   display: block;
   margin: auto;
   margin-bottom: 10px;
+  border: 3px solid #511515;
  }
  button:hover {
-  background-color: #ff9980; 
+  background-color: #f5d6d6; 
 }
  
 .font-40{
@@ -79,10 +84,11 @@ button {
 .main-container {
   background-color: white;
   padding: 20px 20px 20px 20px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
   margin-top: 100px;
-  margin-bottom: 10px;
+  margin-bottom: 100px;
+
 }
 .margin-bottom{
   margin-bottom: 70px;
@@ -92,7 +98,7 @@ button {
   color: white;
 }
 .link-group {
-	background-color: tomato;
+	background-color: #511515;
   padding-top: 20px;
   padding-bottom: 20px;
   position: fixed;
@@ -103,10 +109,27 @@ button {
 
 }
 .link:hover {
-	background-color: #ff9980;
+  background-color: #f5d6d6;
+  color: #511515;
 }
 .less-margin{
   margin-top: -10px;
+}
+.add-border{
+  border: 2px solid black;
+}
+.circle{
+  border-radius: 50%;
+  height: 300px;
+  width: 300px;
+  text-align: center; 
+  vertical-align: middle;
+  line-height: 250px;
+  margin: auto;
+  margin-right: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 2px solid #511515;
 }
 
 
@@ -114,6 +137,9 @@ button {
   img{
     width: 600px;
   
+  }
+  .image{
+    width: 600px;
   }
   header {
     height: 785px;
@@ -123,17 +149,10 @@ button {
 		font-size: 25px;
 	}
   .bio-div{
-    width: 500px;
-    margin: auto;
+    width: 50%;
+    padding: 10px 10px 10px 10px
   }
-  .main-container {
-    background-color: white;
-    padding: 40px 40px 40px 40px;
-    margin-top: 100px;
-    margin-bottom: 50px;
-    margin-left: 30px;
-    margin-right: 30px;
-  }
+
   button{
 		width: 200px;
   }
@@ -143,6 +162,14 @@ button {
   }
   h1 {
 		font-size: 100px;
+  }
+  .me{
+      width: 50%;
+     margin: auto;
+  }
+  .about-me-container{
+    display: flex;
+    margin-bottom: 20px;
   }
 }
 
