--- a/src/index.css
+++ b/src/index.css
@@ -83,11 +83,12 @@ button {
 }
 .main-container {
   background-color: white;
-  padding: 20px 20px 20px 20px;
+  /* padding: 20px 20px 20px 20px; */
   margin-left: 30px;
   margin-right: 30px;
   margin-top: 100px;
   margin-bottom: 100px;
+  /* border: 2px solid red; */
 
 }
 .margin-bottom{
@@ -134,15 +135,28 @@ button {
 .me{
   margin: auto;
 }
+.image{
+  height: 130px;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url('https://cdn.zapier.com/storage/blog/fa7ea22a4a01c779f4845e092bca2b6c.1800x1000.jpg');
+}
+.bio-div{
+  padding: 20px 20px 20px 20px;
+}
+.project{
+  padding: 20px 20px 20px 20px;
+}
 
 @media only screen and (min-width: 740px) {
   img{
     height: 300px;
   
   }
-  /* .image{
-    width: 600px;
-  } */
+  .image{
+    height: 300px;
+  }
   header {
     height: 785px;
 		padding-top: 200px;
@@ -181,7 +195,7 @@ button {
   .project{
       width: 33.33%;
       /* border: 2px solid red; */
-      padding: 20px 20px 20px 20px;
+      
   } 
 }
 
