--- a/src/index.css
+++ b/src/index.css
@@ -118,7 +118,7 @@ button {
   vertical-align: middle;
   line-height: 250px;
   margin: auto;
-  margin-right: 10px;
+  /* margin-right: 10px; */
   margin-top: 20px;
   margin-bottom: 20px;
   border: 2px solid #511515;
@@ -146,8 +146,20 @@ button {
 .project{
   padding: 20px 20px 20px 20px;
 }
+.contact-info{
+  background-color: #511515;
+  color: white;
+}
+._projects{
+  background-color: white;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: 100px;
 
-
+}
+.maroon-background{
+  background-color: #511515;
+}
 @media only screen and (min-width: 740px) {
   img{
     height: 300px;
