--- a/src/index.css
+++ b/src/index.css
@@ -160,10 +160,26 @@ button {
 .maroon-background{
   background-color: #511515;
 }
+.contact-pics{
+  
+}
+._icon{
+  width: 100px;
+  height: 100px;
+  margin-right: 40px;
+  margin-left: 40px;
+ 
+}
+._icon:hover{
+  background-color: #f5d6d6;
+}
 @media only screen and (min-width: 740px) {
   img{
     height: 300px;
   
+  }
+  .contact-pics{
+    /* display: flex; */
   }
   .bio-banner{
     height: 300px;
