add project images

--- a/src/index.css
+++ b/src/index.css
@@ -147,8 +147,7 @@ button {
   padding: 20px 20px 20px 20px;
 }
 .contact-info{
-  background-color: #511515;
-  color: white;
+    padding-top: 10px;
 }
 ._projects{
   background-color: white;
@@ -161,7 +160,9 @@ button {
   background-color: #511515;
 }
 .contact-pics{
-  
+  margin: auto;
+  /* border: 2px solid red; */
+  padding: 30px 0px 30px 0px;
 }
 ._icon{
   width: 100px;
@@ -173,9 +174,27 @@ button {
 ._icon:hover{
   background-color: #f5d6d6;
 }
+.copyright{
+  background-color: #511515;
+  width: 100%;
+  color: white;
+  margin-top: -50px;
+  padding: 5px 0px 5px 0px;
+}
+.chef-image{
+  background-image: url('');
+}
+.venom-image{
+  background-image: url('');
+}
+.future-image{
+  background-image: url('');
+}
+
 @media only screen and (min-width: 740px) {
   img{
-    height: 300px;
+    height: 400px;
+    border: 2px solid grey;
   
   }
   .contact-pics{
@@ -225,8 +244,22 @@ button {
   .project{
       width: 33.33%;
       /* border: 2px solid red; */
+
+     
       
   } 
+
+}
+
+@media only screen and (min-width: 1380px) {
+  .venom{
+    padding: 0px 70px 0px 70px;
+    /* background-color: black; */
+  }
+  .future{
+    padding: 0px 70px 0px 70px;
+    /* background-color: black; */
+  }
 }
 
 /* */
