--- a/src/index.css
+++ b/src/index.css
@@ -181,21 +181,35 @@ button {
   margin-top: -50px;
   padding: 5px 0px 5px 0px;
 }
-.chef-image{
-  background-image: url('');
+.box{
+  width: 100%;
+  height: 500px;
+  margin: auto;
+  text-align: center;
 }
-.venom-image{
-  background-image: url('');
+.chef-image{
+  background-image: url('https://user-images.githubusercontent.com/18128525/43463105-7373d126-949d-11e8-8bc4-75d8cc3f0b32.png');
+  background-size: cover;
+
 }
 .future-image{
-  background-image: url('');
+  background-image: url('https://preview.ibb.co/mGxNMV/song.png');
+  background-size: cover;
+}
+.venom-image{
+  background-image: url('https://preview.ibb.co/bEq6Fq/venom.png');
+  background-size: cover;
 }
 
 @media only screen and (min-width: 740px) {
   img{
     height: 400px;
-    border: 2px solid grey;
+    /* border: 2px solid grey; */
   
+  }
+  .box{
+    width: 300px;
+    height: 300px;
   }
   .contact-pics{
     /* display: flex; */
@@ -245,8 +259,6 @@ button {
       width: 33.33%;
       /* border: 2px solid red; */
 
-     
-      
   } 
 
 }
