--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ ul {
 }
 img{
   width: 100%;
-
+ 
 }
 p{
   font-size: 17px;
@@ -54,9 +54,11 @@ button {
   margin: auto;
   margin-bottom: 10px;
   border: 3px solid #511515;
+  transition-duration: 1s;
  }
  button:hover {
   background-color: #f5d6d6; 
+  transform: scale(1.4);
 }
 .add-padding{
   padding: 20px 20px 20px 20px;
@@ -169,11 +171,11 @@ button {
   height: 100px;
   margin-right: 40px;
   margin-left: 40px;
- 
+  transition-duration: 1s;
 }
 ._icon:hover{
-  background-color: #f5d6d6;
   cursor: pointer;
+  transform: scale(1.4);
 }
 .copyright{
   background-color: #511515;
